--- a/css/stil.css
+++ b/css/stil.css
@@ -1,34 +1,42 @@
+body{
+    background-image: url('../img/bg.jpg') !important; 
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+}
+body .container-fluid:first-child{
+    background-color: transparent !important;
+}
 .nav-item a:hover{
-    background-color: #ffc107 ;
-    color: rgb(41, 35, 35)  !important;
+    background-color: #ffffff ;
+    color: #0d6efd !important;
     transition:1s;
-}
-.indeks a:hover, .hover:hover{
-    background-color: #868e96 ;
-    color: rgb(41, 35, 35)  !important;
-}
-.najpopularnije a:hover{
-    background-color: whitesmoke ;
-    color: rgb(41, 35, 35)  !important;
 }
 .m{
     z-index: 3;
+}
+.vrati{
+    position: fixed;
+    bottom: 1em;
+    padding:1em 2em;
+    border-radius: 100%;
+    z-index: 8;
+    right: 1em;
 }
 .m a{
     text-decoration: none;
 }
 footer button:hover{
-    font-size: 1.45em;
-    color:  #ffc107 !important;
-    background-color: white !important;
+    color:  white !important;
+    background-color: #0d6efd !important;
     transition:0.5s;  
+}
+footer button i{
+    font-size: 1.5em;
 }
 table tr td{
     padding: 2px;
    color: rgb(24, 22, 22);    
-}
-.card{
-    background-color: #6e7279;
 }
 .card:hover{
     box-shadow: 3px 3px 6px rgb(77, 70, 70);
@@ -45,15 +53,8 @@ table tr td{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
 }
 .siva{
-    background-color:#dee2e7;
     opacity: 0.1;
     transition: opacity 1.9s;
-}
-footer{
-    position: relative;
-    bottom: 4000px;
-    opacity:0;
-    transition: bottom 1.5s, opacity 2.3s;
 }
 #desno{
     position: relative;
@@ -69,13 +70,13 @@ footer{
 #frmkontakt input{
     background-color: transparent;
     border: none;
-    border-bottom:1px solid white; 
+    border-bottom:1px solid #0d6efd; 
     transition: 1s;
 }
 #frmkontakt input:focus{
-    color:white;
+    color:white !important;
     outline: none;
-    border-bottom:1px solid #ffc107;
+    border-bottom:1px solid white;
 }
 #report{
     opacity: 0.7;
@@ -93,20 +94,13 @@ footer{
     position: relative;
     left:-90%;
 }
-span.galerija{
-    position: relative;
-    bottom:160px;
-    left:30%;
-    box-shadow: 0px 0px 22px white;
-    transition: 1s;
-}
 .slikaZaModal{
    filter: grayscale(0%);
    transition: 0.6s;
    box-shadow: 0px 0px 40px black;
 }
 .slikaZaModal:hover, s{
-    filter: grayscale(100%);
+    transform: scale(1.06);
 }
 span.galerija:hover{
     transform: scale(1.1);
@@ -114,15 +108,6 @@ span.galerija:hover{
 .back{
     background-color: rgb(24, 21, 21);
     opacity: 0.8;
-}
-body.horoskop footer span h6, .horoskop footer button:hover, nav a{
-   color: rgb(226, 113, 187) !important;
-}
-body.horoskop footer span a button{
-    background-color: rgb(226, 113, 187);
-}
-body.horoskop footer a:hover{
-    background-color: #343a40!important;
 }
 .horoskopSlike{
     left:100%;
@@ -132,14 +117,4 @@ body.horoskop footer a:hover{
 }
 p.back:focus{
     opacity: 1 !important;
-}
-@media (max-width: 768px) {
-    .card-columns {
-        column-count: 2;
-    }
-}
-@media (max-width: 576px) {
-    .card-columns {
-        column-count: 1;
-    }
 }
